# basic-anti-virus-formacos

./: .gitignore  CMakeLists.txt  README.md
include/: Hasher.h  Quarantine.h  Scanner.h
src/: Hasher.cpp  Quarantine.cpp  Scanner.cpp  main.cpp
